cluster/manifests/cilium-addons/base/cilium_clusterwide_network_policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: l7-visibility
spec:
  endpointSelector:
    matchLabels:
      policy.cilium.io/l7-visibility: "true"
  egress:
    - toEntities:
        - all
    - toPorts:
      - ports:
        - port: "53"
          protocol: ANY
        rules:
          dns:
          - matchPattern: "*"
